<resources>
    <string name="app_name">Worker registration application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_hun">Welcome to the application!</string>
    <string name="username_hun">Username:</string>
    <string name="password_hun">Password:</string>
    <string name="button_login_hun">Login</string>
    <string name="title_hun">Worker registration application</string>
    <string name="welcome_generic_hun">Welcome!</string>
    <string name="button_hire_hun">Worker Registration</string>
    <string name="button_modify_hun">Modifying existing data entries</string>
    <string name="button_fire_hun">Fire Worker</string>
    <string name="button_quit_hun">Exit</string>
    <string name="button_next_hun">Next</string>
    <string name="button_prev_hun">Back</string>
    <string name="fullname_hun">Name:</string>
    <string name="id_num_hun">ID Card number:</string>
    <string name="birthdate_hun">Birthdate:</string>
    <string name="address_hun">Address:</string>
    <string name="city_hun">City:</string>
    <string name="gender_label_hun">Gender:</string>
    <string name="gender_male_hun">Male</string>
    <string name="gender_female_hun">Female</string>
    <string name="salary_hun">Salary:</string>
    <string name="position_hun">Position:</string>
    <string name="territory_hun">Territory:</string>
    <string name="group_header_hun">Group Selection</string>
    <string name="privilege_header_hun">Privilege Selection</string>
    <string name="overview_header_hun">Overview</string>
    <string name="photo_header_hun">Profile Picture Capturing</string>
    <string name="photo_check_hun">Show picture</string>
    <string name="fire_generic_hun">Fire</string>
    <string name="button_ok_hun">Go</string>
    <string name="button_finish_hun">Finish</string>
    <string name="success_label_hun">Input stored!</string>
    <string name="qr_code_label_hun">Application form QR-Code:</string>
    <string name="datepicker_hun">Date Selection</string>
    <string name="citypicker_hun">City Selection</string>
    <string name="city_generic_hun">City:</string>
    <string name="travellingsupport_generic_hun">Transport supporting fee: </string>
    <string name="video_button_hun">Play video</string>
    <string name="phone_button">Phone calling</string>
    <string name="phone_call">Call</string>
    <string name="phone_dial">Dialer</string>
    <string name="phone_number">Phone number</string>
    <string name="home_page">Home page</string>
</resources>